fix: overflow in android tablets + new gallery image of action center
fixed overflow in some android tablets also noticeable when toggle device emulation is on in dev tools

+ replaced old gallery img to show the new action center

--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100vw;
@@ -93,15 +91,21 @@ input::selection {
   border: solid 1px blue;
 }
 
-img[data-invert='true'], svg[data-invert='true'], i[data-invert='true'] {
+img[data-invert="true"],
+svg[data-invert="true"],
+i[data-invert="true"] {
   filter: invert(1);
 }
 
-img[data-rounded='true'], svg[data-rounded='true'], i[data-rounded='true'] {
+img[data-rounded="true"],
+svg[data-rounded="true"],
+i[data-rounded="true"] {
   border-radius: 1000px;
 }
 
-img[data-flip='true'], svg[data-flip='true'], i[data-flip='true'] {
+img[data-flip="true"],
+svg[data-flip="true"],
+i[data-flip="true"] {
   transform: scale(-1, 1);
 }
 
@@ -143,8 +147,7 @@ img[data-flip='true'], svg[data-flip='true'], i[data-flip='true'] {
 }
 
 input {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue';
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue";
 }
 
 .ltShad0 {
@@ -228,6 +231,12 @@ input {
   }
 }
 
+@keyframes overflow-hider {
+  100% {
+    width: 0;
+  }
+}
+
 .hvdark:hover {
   background: rgba(0, 0, 0, 0.08);
   transition: all 200ms ease-in-out;
@@ -235,7 +244,7 @@ input {
 
 a {
   text-decoration: none;
-  color: #0080E1;
+  color: #0080e1;
 }
 
 #textpad {
@@ -256,7 +265,7 @@ a {
   display: none;
 }
 
-#brightoverlay{
+#brightoverlay {
   position: absolute;
   top: 0;
   left: 0;
